# kxc-melange-react

./: .gitignore  Makefile  NOTICE  dune-project  kxc-melange-react-ppx.opam  kxc-melange-react.opam  package.json
example/chakra-simple/: README.md  ReactApp.ml  dune  package.json
example/chakra-simple/public/: index.html
src/lib_kxc_melange_react/: dune  kxc_melange_react.ml
src/ppx/: dune  kxc_melange_react_ppx.ml
